--- a/Bitacoras/Carlos/20180920-Carlos.md
+++ b/Bitacoras/Carlos/20180920-Carlos.md
@@ -1,12 +1,16 @@
+# Bitácora, Carlos Villalobos
+
 ## 2018-09-20
 
-#Algoritmo A*
+## Algoritmo A*
 
 **Enlace**: 
 
 http://theory.stanford.edu/~amitp/GameProgramming/AStarComparison.html
 
-#Heuristicas
+## Heuristicas
+
+
 
 **Enlace**:
 
